--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Frogs -- Central America'
 - !lcsh 'Hyla microcephala'
 - !lcc 'QH'
+- GITenberg
 title: Middle American Frogs of the Hyla microcephala Group
 url: http://www.gutenberg.org/ebooks/34604
